[package]
name = "alt-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1.3.3" }
serde = { version = "1.0.189" }
solana-client = { version = "1.17.3" }
solana-sdk = { version = "1.17.3" }
